# Minecraft

./: .gitignore  CMakeLists.txt  skinning-solution
cmake/: gl3.cmake
src/: CMakeLists.txt  README.md  block.cc  block.h  chunk.cpp  chunk.h  chunkmanager.cpp  chunkmanager.h  cube.cc  cube.h  gui.cc  gui.h  main.cc  perlin.cc  perlin.h  procedure_geometry.cc  procedure_geometry.h  render_pass.cc  render_pass.h  skybox.cpp  skybox.h  terrain_generator.cc  terrain_generator.h
src/shaders/: bone.frag  cube.frag  cube.geom  cube.vert  skybox.frag  skybox.vert
